tests/paczka1/fuzzy1/15668163.err
Error in line 1: hhYWEL7P S997 18,5
Error in line 10: uFySst S872 55,4
Error in line 27: cR7fkeuRRtT S872 65,1
